# python-distilclient

./: .gitignore  .gitreview  .stestr.conf  .testr.conf  AUTHORS  ChangeLog  README.md  README.rst  bindep.txt  other-requirements.txt  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
distilclient/: __init__.py  base.py  cli.py  client.py  exc.py  exceptions.py  i18n.py  shell.py  version.py
distilclient/common/: base.py  cliutils.py  httpclient.py  utils.py
distilclient/common/apiclient/: auth.py  base.py  client.py  exceptions.py  fake_client.py  utils.py
distilclient/tests/unit/: test_base.py  test_client.py
distilclient/tests/unit/v1/: test_client.py
distilclient/tests/unit/v2/: fake_clients.py  fakes.py  test_client.py  test_credits.py  test_health.py  test_invoices.py  test_measurements.py  test_products.py  test_quotations.py  test_usage.py
distilclient/v1/: client.py
distilclient/v2/: cli.py  client.py  costs.py  credits.py  health.py  invoices.py  measurements.py  products.py  quotations.py  usage.py  usages.py
doc/: conf.py
doc/source/: client.rst  conf.py  index.rst
