[metadata]
name = python-distilclient
version = 0.0.2
summary = Client library for Catalyst Cloud Rating API
description-file =
    README.rst
license = Apache License, Version 2.0
author = Catalyst IT Cloud team
author-email = cloud@catalyst.net.nz
home-page = http://www.catalyst.net.nz/
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    distil = distilclient.shell:main

[files]
packages =
    distilclient

[nosetests]
where=tests
verbosity=2

[wheel]
universal = 1
