[metadata]
name = python-distilclient
summary = Client library for Catalyst Cloud Rating API
description-file =
    README.rst
license = Apache License, Version 2.0
author = Catalyst IT Cloud team
author-email = cloud@catalyst.net.nz
home-page = http://www.catalyst.net.nz/
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    distil = distilclient.shell:main

openstack.rating.v2 =
    rating_health = distilclient.v2.cli:Health
    rating_product_list = distilclient.v2.cli:ListProducts

openstack.cli.extension =
    rating = distilclient.cli

[files]
packages =
    distilclient

[nosetests]
where=tests
verbosity=2

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[wheel]
universal = 1
